--- a/index.html
+++ b/index.html
@@ -9,33 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="./css/style.css" rel="stylesheet">
-    <style>
-        .card-container {
-            display: flex;
-            flex-wrap: nowrap;
-            justify-content: center;
-            gap: 10px;
-            overflow-x: auto; /* Adiciona rolagem horizontal se necessário */
-            padding-bottom: 10px;
-        }
-
-        .card {
-            flex: 0 0 auto;
-            width: 100px; /* Ajuste conforme necessário */
-            text-align: center;
-        }
-
-        .card img {
-            max-width: 100%;
-            height: auto;
-        }
-    </style>
 </head>
 
 <body>
     <div class="container py-5">
         <div class="card-container py-5">
-            <!-- Cards 1 a 14 -->
+            <!-- Card 1 -->
             <div class="card">
                 <a href="http://sv-apl:8191/?StartProg=SIGAMDI&Comm=TCP&Env=Envmaq" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -43,6 +22,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 2 -->
             <div class="card">
                 <a href="https://app.tecnoponto.com" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -50,6 +30,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 3 -->
             <div class="card">
                 <a href="https://maquira-company.monday.com" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -57,6 +38,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 4 -->
             <div class="card">
                 <a href="https://sso.online.tableau.com/public/login" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -64,6 +46,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 5 -->
             <div class="card">
                 <a href="https://sistema.rhgestor.com.br/login" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -71,6 +54,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 6 -->
             <div class="card">
                 <a href="https://calendar.google.com/calendar" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -78,6 +62,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 7 -->
             <div class="card">
                 <a href="https://mail.google.com" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -85,6 +70,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 8 -->
             <div class="card">
                 <a href="https://cloud.conexaonfe.com.br/#/page/login" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -92,6 +78,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 9 -->
             <div class="card">
                 <a href="https://login.qualyteam.com.br/login/login.aspx" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -99,6 +86,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 10 -->
             <div class="card">
                 <a href="https://meet.google.com/" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -106,6 +94,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 11 -->
             <div class="card">
                 <a href="http://drive.google.com" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -113,6 +102,7 @@
                     </div>
                 </a>
             </div>
+            <!-- Card 12 -->
             <div class="card">
                 <a href="https://admin.gopliance.com.br" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -120,6 +110,15 @@
                     </div>
                 </a>
             </div>
+              <!-- Card 13 -->
+              <div class="card">
+                <a href="https://maquira.datafrete.app/maquira/index/login" target="_blank" class="text-decoration-none">
+                    <div class="card-body">
+                        <img src="https://i.ibb.co/4s8dj9D/data-frete.png" class="card-img" alt="...">
+                    </div>
+                </a>
+            </div>
+            <!-- Card 14 -->
             <div class="card">
                 <a href="http://maq-srv-erp-01:4321/?StartProg=SIGAMDI&Comm=TCP&Env=Envmaqch" target="_blank" class="text-decoration-none">
                     <div class="card-body">
@@ -127,16 +126,8 @@
                     </div>
                 </a>
             </div>
-            <div class="card">
-                <a href="https://maquira.datafrete.app/maquira/index/login" target="_blank" class="text-decoration-none">
-                    <div class="card-body">
-                        <img src="https://i.ibb.co/4s8dj9D/data-frete.png" class="card-img" alt="Novo botão">
-                    </div>
-                </a>
-            </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
