--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <div class="card">
                 <a href="https://maquira.datafrete.app/maquira/index/login" target="_blank" class="text-decoration-none">
                     <div class="card-body">
-                        <img src="https://i.ibb.co/4s8dj9D/data-frete.png" class="card-img" alt="...">
+                        <img src="https://i.ibb.co/LdZ4jgLT/RH-Gestor.png" class="card-img" alt="...">
                     </div>
                 </a>
             </div>
