--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="card-container py-5">
             <!-- Card 1 -->
             <div class="card">
-                <a href="http://sv-apl:8191/?StartProg=SIGAMDI&Comm=TCP&Env=Envmaq" target="_blank" class="text-decoration-none">
+                <a href="https://portal.maquira.com.br:1000/webapp/?E=ENVMAQ&P=SIGAMDI" target="_blank" class="text-decoration-none">
                     <div class="card-body">
                         <img src="https://i.ibb.co/syp0v2J/Totvs-Web.png" class="card-img" alt="...">
                     </div>
